<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeColor="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_chat_info_gradient"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- logo -->
        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="14dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_chatbot_info" />

        <!-- title -->
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/chatbot_welcome_title"
            android:textColor="@android:color/white"
            android:textSize="21sp" />

        <!-- title -->
        <TextView
            android:id="@+id/txtTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/chatbot_welcome_description"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <!-- script text -->
        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/chatbot_tip_1"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>