<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="24dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- icon -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_congratulation" />

            <!-- title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/congrats_title"
                android:textColor="@color/Neutral0"
                android:textSize="31sp" />

            <!-- subText -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/congrats_message"
                android:textAlignment="center"
                android:textColor="@color/Neutral60"
                android:textSize="16sp" />

            <!-- home Btn -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_go_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="12dp"
                android:text="@string/btn_go_home"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/Main01"
                app:cornerRadius="8dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>